[gd_scene load_steps=2 format=3 uid="uid://cphrrqk6fo15u"]

[ext_resource type="Script" path="res://Label.gd" id="1_8wabt"]

[node name="Node" type="Node"]

[node name="Label" type="Label" parent="."]
offset_left = 320.0
offset_right = 768.0
offset_bottom = 64.0
script = ExtResource("1_8wabt")

[node name="start" type="Button" parent="Label"]
layout_mode = 0
offset_top = 96.0
offset_right = 64.0
offset_bottom = 128.0
text = "start"

[node name="stop" type="Button" parent="Label"]
layout_mode = 0
offset_left = 192.0
offset_top = 96.0
offset_right = 256.0
offset_bottom = 128.0
text = "stop"

[node name="reset" type="Button" parent="Label"]
layout_mode = 0
offset_left = 384.0
offset_top = 96.0
offset_right = 448.0
offset_bottom = 128.0
text = "reset"

[node name="exit" type="Button" parent="Label"]
layout_mode = 0
offset_left = 72.0
offset_top = 160.0
offset_right = 312.0
offset_bottom = 192.0
text = "exit"

[node name="extern" type="Button" parent="Label"]
layout_mode = 0
offset_left = 384.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 256.0
text = "extern"

[connection signal="pressed" from="Label/start" to="Label" method="_on_start_pressed"]
[connection signal="pressed" from="Label/stop" to="Label" method="_on_stop_pressed"]
[connection signal="pressed" from="Label/reset" to="Label" method="_on_reset_pressed"]
[connection signal="pressed" from="Label/exit" to="Label" method="_on_exit_pressed"]
[connection signal="pressed" from="Label/extern" to="Label" method="_on_extern_pressed"]
